Remove unnecessary CDirectoryNode classes for compilations and years nodes, they are implemented as NODE_TYPE_ALBUM nodes

--- a/xbmc/filesystem/MusicDatabaseDirectory/CMakeLists.txt
+++ b/xbmc/filesystem/MusicDatabaseDirectory/CMakeLists.txt
@@ -1,6 +1,4 @@
-set(SOURCES DirectoryNodeAlbumCompilations.cpp
-            DirectoryNodeAlbumCompilationsSongs.cpp
-            DirectoryNodeAlbum.cpp
+set(SOURCES DirectoryNodeAlbum.cpp
             DirectoryNodeAlbumRecentlyAdded.cpp
             DirectoryNodeAlbumRecentlyAddedSong.cpp
             DirectoryNodeAlbumRecentlyPlayed.cpp
@@ -15,15 +13,11 @@ set(SOURCES DirectoryNodeAlbumCompilations.cpp
             DirectoryNodeSingles.cpp
             DirectoryNodeSong.cpp
             DirectoryNodeSongTop100.cpp
-            DirectoryNodeTop100.cpp
-            DirectoryNodeYearAlbum.cpp
-            DirectoryNodeYearSong.cpp
+            DirectoryNodeTop100.cpp           
             QueryParams.cpp)
 
 set(HEADERS DirectoryNode.h
             DirectoryNodeAlbum.h
-            DirectoryNodeAlbumCompilations.h
-            DirectoryNodeAlbumCompilationsSongs.h
             DirectoryNodeAlbumRecentlyAdded.h
             DirectoryNodeAlbumRecentlyAddedSong.h
             DirectoryNodeAlbumRecentlyPlayed.h
@@ -38,8 +32,6 @@ set(HEADERS DirectoryNode.h
             DirectoryNodeSong.h
             DirectoryNodeSongTop100.h
             DirectoryNodeTop100.h
-            DirectoryNodeYearAlbum.h
-            DirectoryNodeYearSong.h
             QueryParams.h)
 
 core_add_library(musicdatabasedirectory)
