[depends] bump libbluray to 1.1.2
- build static
- enable metadata support (libxml2)
- enable font support (freetype2)
- add fontconfig dependency

--- a/tools/android/packaging/Makefile.in
+++ b/tools/android/packaging/Makefile.in
@@ -5,7 +5,7 @@ BUILD_TYPE_LC:=$(shell echo $(BUILD_TYPE) | tr A-Z a-z)
 
 OBJS = libshairplay.so \
   libass.so \
-  libbluray.so libsmbclient.so
+  libsmbclient.so
 
 PLATFORM_OBJS =
 EXCLUDED_ADDONS =
