[ios] refactor MPNowPlaying functions to ios-common
Factor out the MPNowplaying functions to ios-common as they will be used as is for
tvos and ios.
Fix warning about deprecated method use
Modernise obj-c code

--- a/xbmc/platform/darwin/ios-common/CMakeLists.txt
+++ b/xbmc/platform/darwin/ios-common/CMakeLists.txt
@@ -1,8 +1,10 @@
 set(SOURCES AnnounceReceiver.mm
+            DarwinEmbedNowPlayingInfoManager.mm
             IOSKeyboard.mm
             IOSKeyboardView.mm)
 
 set(HEADERS AnnounceReceiver.h
+            DarwinEmbedNowPlayingInfoManager.h
             IOSKeyboard.h
             IOSKeyboardView.h)
 
