[ios/tvos] Relocate CPUInfo for DarwinEmbed platforms

--- a/xbmc/platform/darwin/ios-common/CMakeLists.txt
+++ b/xbmc/platform/darwin/ios-common/CMakeLists.txt
@@ -1,10 +1,12 @@
 set(SOURCES AnnounceReceiver.mm
+            CPUInfoDarwinEmbed.cpp
             DarwinEmbedKeyboard.mm
             DarwinEmbedKeyboardView.mm
             DarwinEmbedNowPlayingInfoManager.mm
             DarwinNSUserDefaults.mm)
 
 set(HEADERS AnnounceReceiver.h
+            CPUInfoDarwinEmbed.h
             DarwinEmbedKeyboard.h
             DarwinEmbedKeyboardView.h
             DarwinEmbedNowPlayingInfoManager.h
