[PVR] EPG: Load EPG tags from database on demand only; do never preload and hold all tags in memory.

--- a/xbmc/pvr/epg/CMakeLists.txt
+++ b/xbmc/pvr/epg/CMakeLists.txt
@@ -4,6 +4,7 @@ set(SOURCES EpgContainer.cpp
             EpgInfoTag.cpp
             EpgSearchFilter.cpp
             EpgChannelData.cpp
+            EpgTagsCache.cpp
             EpgTagsContainer.cpp)
 
 set(HEADERS Epg.h
@@ -12,6 +13,7 @@ set(HEADERS Epg.h
             EpgInfoTag.h
             EpgSearchFilter.h
             EpgChannelData.h
+            EpgTagsCache.h
             EpgTagsContainer.h)
 
 core_add_library(pvr_epg)
