[settings] move ISubSettings handling from CSettingsManager to CSettings
ISubSettings were only used in CSettings so no need to have them in CSettingsManager.

--- a/xbmc/settings/CMakeLists.txt
+++ b/xbmc/settings/CMakeLists.txt
@@ -21,6 +21,7 @@ set(HEADERS AdvancedSettings.h
             DiscSettings.h
             DisplaySettings.h
             GameSettings.h
+            ISubSettings.h
             LibExportSettings.h
             MediaSettings.h
             MediaSourceSettings.h
