--- a/xbmc/pvr/epg/CMakeLists.txt
+++ b/xbmc/pvr/epg/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCES EpgContainer.cpp
             Epg.cpp
             EpgDatabase.cpp
             EpgInfoTag.cpp
+            EpgSearchData.cpp
             EpgSearchFilter.cpp
             EpgChannelData.cpp
             EpgTagsCache.cpp
@@ -11,6 +12,7 @@ set(HEADERS Epg.h
             EpgContainer.h
             EpgDatabase.h
             EpgInfoTag.h
+            EpgSearchData.h
             EpgSearchFilter.h
             EpgChannelData.h
             EpgTagsCache.h
