[ios] rename DebugLogSharingPresenter and move it to a separate file

--- a/xbmc/platform/darwin/ios/CMakeLists.txt
+++ b/xbmc/platform/darwin/ios/CMakeLists.txt
@@ -2,12 +2,14 @@ set(SOURCES CPUInfoIos.cpp
             IOSEAGLView.mm
             IOSExternalTouchController.mm
             IOSScreenManager.mm
+            IOSSettingsHandler.mm
             XBMCController.mm)
 
 set(HEADERS CPUInfoIos.h
             IOSEAGLView.h
             IOSExternalTouchController.h
             IOSScreenManager.h
+            IOSSettingsHandler.h
             XBMCApplication.h
             XBMCController.h)
 
