--- a/cmake/addons/CMakeLists.txt
+++ b/cmake/addons/CMakeLists.txt
@@ -78,6 +78,8 @@ list(APPEND CMAKE_PREFIX_PATH ${CMAKE_INSTALL_PREFIX})
 if (CMAKE_SYSTEM_NAME STREQUAL WindowsStore)
   set(BUILD_ARGS_ext -DCMAKE_SYSTEM_NAME=${CMAKE_SYSTEM_NAME}
                      -DCMAKE_SYSTEM_VERSION=${CMAKE_SYSTEM_VERSION})
+elseif(CORE_SYSTEM_NAME STREQUAL osx)
+  set(BUILD_ARGS_ext -DOSX_CODE_SIGN_IDENTITY=${CODE_SIGN_IDENTITY})
 endif()
 
 include(${CORE_SOURCE_DIR}/cmake/scripts/common/CompilerSettings.cmake)
